--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@
 
 plugins {
     // Apply the java-library plugin for API and implementation separation.
-    id 'java-library'
+    id 'java'
 }
 
 repositories {
@@ -32,7 +32,7 @@ dependencies {
     
 }
 
-task test{
+task test1{
 	useTestNG(){
 	suites 'TestNG_Test.xml'
 	}
